# IMDB-Trakt-Syncer

./: Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-publish.yml
IMDBTraktSyncer/: IMDBTraktSyncer.py  __main__.py  arguments.py  authTrakt.py  checkChrome.py  checkChromedriver.py  checkVersion.py  errorHandling.py  errorLogger.py  imdbData.py  imdbRatings.py  traktData.py  traktRatings.py  verifyCredentials.py
IMDbTraktSyncer/: IMDbTraktSyncer.py  authTrakt.py  checkChromedriver.py  imdbRatings.py  traktRatings.py  verifyCredentials.py
